--- a/index.html
+++ b/index.html
@@ -26,14 +26,11 @@
         #game-container {
             margin-top: 2rem;
             width: 80%;
-            max-width: 600px;
+            max-width: 700px;
             border: 1px solid #ccc;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
-        #start-screen, #game-screen {
             padding: 1rem;
         }
         button {
@@ -50,21 +47,15 @@
         button.secondary {
             background-color: #ccc;
             color: #333;
-            margin-left: 0.5rem;
-        }
-        #balance {
-            margin-top: 0.5rem;
-            font-weight: bold;
         }
         #hidden-object-area {
             position: relative;
             width: 100%;
-            height: 300px;
-            background: linear-gradient(135deg, #83a4d4, #b6fbff);
+            height: 320px;
+            background: linear-gradient(180deg, #83a4d4 0%, #b6fbff 100%);
             overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            border-radius: 8px;
+            margin-bottom: 1rem;
         }
         .object {
             position: absolute;
@@ -72,13 +63,32 @@
             height: 32px;
             color: #ffd700;
             font-size: 32px;
-            line-height: 32px;
             text-align: center;
+            line-height: 32px;
             cursor: pointer;
         }
-        #timer {
-            margin-top: 0.5rem;
+        #level-info, #coin-display, #timer {
+            margin-bottom: 0.5rem;
             font-weight: bold;
+        }
+        #progress-container {
+            width: 100%;
+            height: 12px;
+            background-color: #e0e0e0;
+            border-radius: 6px;
+            overflow: hidden;
+            margin-bottom: 0.5rem;
+        }
+        #progress-bar {
+            height: 100%;
+            width: 100%;
+            background-color: #4caf50;
+            transition: width 1s linear;
+        }
+        #controls {
+            margin-top: 1rem;
+            display: flex;
+            gap: 1rem;
         }
     </style>
 </head>
@@ -88,17 +98,21 @@
     </header>
     <div id="game-container">
         <div id="start-screen">
-            <p>Welcome to this hidden object demo game. In the final system, the coins will be held in a real crypto wallet. For now, you start with a demo balance of 5 coins.</p>
+            <p>Welcome to this hidden object demo game. You start with a demo balance of 5 coins. Each level you will earn more coins.</p>
             <button id="connect-wallet" class="secondary">Connect Wallet (Demo)</button>
             <button id="start-game" class="primary">Start Game</button>
             <div id="balance"></div>
         </div>
         <div id="game-screen" style="display:none;">
-            <p>Find all the hidden stars. Each level adds more stars and less time. Use a hint at the cost of one coin if you're stuck.</p>
+            <div id="level-info"></div>
+            <div id="coin-display"></div>
             <div id="timer"></div>
+            <div id="progress-container"><div id="progress-bar"></div></div>
             <div id="hidden-object-area"></div>
-            <button id="hint-button" class="secondary">Get Hint (-1 coin)</button>
-            <button id="reset-button" class="secondary">Reset Game</button>
+            <div id="controls">
+                <button id="hint-button" class="secondary">Hint (Cost: 1 coin)</button>
+                <button id="reset-button" class="secondary">Reset Game</button>
+            </div>
             <div id="game-message"></div>
         </div>
     </div>
