--- a/index.html
+++ b/index.html
@@ -66,16 +66,37 @@
             text-align: center;
             line-height: 32px;
             cursor: pointer;
+            animation: pulse 2s infinite;
         }
-        #level-info, #coin-display, #timer {
-            margin-bottom: 0.5rem;
+        /* pulsating animation for stars */
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+        /* sparkles for collection effect */
+        .spark {
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            background-color: #ffd700;
+            border-radius: 50%;
+            opacity: 0.8;
+            animation: sparkle 0.6s forwards;
+        }
+        @keyframes sparkle {
+            0% { transform: scale(1); opacity: 1; }
+            100% { transform: scale(0.1); opacity: 0; }
+        }
+        #level-info, #coin-display, #score-info, #timer {
+            margin-bottom: 0.3rem;
             font-weight: bold;
         }
         #progress-container {
             width: 100%;
-            height: 12px;
+            height: 14px;
             background-color: #e0e0e0;
-            border-radius: 6px;
+            border-radius: 7px;
             overflow: hidden;
             margin-bottom: 0.5rem;
         }
@@ -89,6 +110,11 @@
             margin-top: 1rem;
             display: flex;
             gap: 1rem;
+        }
+        /* game-message styling */
+        #game-message {
+            margin-top: 0.5rem;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -106,6 +132,7 @@
         <div id="game-screen" style="display:none;">
             <div id="level-info"></div>
             <div id="coin-display"></div>
+            <div id="score-info"></div>
             <div id="timer"></div>
             <div id="progress-container"><div id="progress-bar"></div></div>
             <div id="hidden-object-area"></div>
