--- a/index.html
+++ b/index.html
@@ -112,6 +112,188 @@
             cursor: pointer;
             animation: bounce 1.5s infinite;
         }
+        .time-item {
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            background-color: #4caf50;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 20px;
+            cursor: pointer;
+            animation: bounce 1.5s infinite;
+        }
+        .life-item {
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            background-color: #e91e63;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 20px;
+            cursor: pointer;
+            animation: bounce 1.5s infinite;
+        }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-5px); }
+        }
+        #level-info, #coin-display, #lives-info, #score-info, #timer {
+            margin-bottom: 0.3rem;
+            font-weight: bold;
+        }
+        #progress-container {
+            width: 100%;
+            height: 14px;
+            background-color: #e0e0e0;
+            border-radius: 7px;
+            overflow: hidden;
+            margin-bottom: 0.5rem;
+        }
+        #progress-bar {
+            height: 100%;
+            width: 100%;
+            background-color: #4caf50;
+            transition: width 1s linear;
+        }
+        #controls {
+            margin-top: 1rem;
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+        #game-message {
+            margin-top: 0.5rem;
+            font-weight: bold;
+        }
+        #difficulty-select {
+            margin-top: 0.5rem;
+            padding: 0.4rem;
+            font-size: 1rem;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Crypto Hidden Object Game (Demo)</h1>
+    </header>
+    <div id="game-container">
+        <div id="start-screen">
+            <p>Welcome to this hidden object demo game. Choose a difficulty level, then start. You start with a demo balance of 5 coins.</p>
+            <label for="difficulty-select">Difficulty:</label>
+            <select id="difficulty-select">
+                <option value="easy">Easy</option>
+                <option value="normal" selected>Normal</option>
+                <option value="hard">Hard</option>
+            </select>
+            <br/>
+            <button id="connect-wallet" class="secondary">Connect Wallet (Demo)</button>
+            <button id="start-game" class="primary">Start Game</button>
+            <div id="balance"></div>
+        </div>
+        <div id="game-screen" style="display:none;">
+            <div id="level-info"></div>
+            <div id="coin-display"></div>
+            <div id="lives-info"></div>
+            <div id="score-info"></div>
+            <div id="timer"></div>
+            <div id="progress-container"><div id="progress-bar"></div></div>
+            <div id="hidden-object-area"></div>
+            <div id="controls">
+                <button id="hint-button" class="secondary">Hint (Cost: 1 coin)</button>
+                <button id="reveal-button" class="secondary">Reveal All (Cost: 3 coins)</button>
+                <button id="reset-button" class="secondary">Reset Game</button>
+            </div>
+            <div id="game-message"></div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
+            font-size: 1rem;
+            cursor: pointer;
+            border: none;
+            border-radius: 4px;
+        }
+        button.primary {
+            background-color: #4a90e2;
+            color: white;
+        }
+        button.secondary {
+            background-color: #ccc;
+            color: #333;
+        }
+        #hidden-object-area {
+            position: relative;
+            width: 100%;
+            height: 320px;
+            background: linear-gradient(180deg, #83a4d4 0%, #b6fbff 100%);
+            overflow: hidden;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+        }
+        .object {
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            color: #ffd700;
+            font-size: 32px;
+            text-align: center;
+            line-height: 32px;
+            cursor: pointer;
+            animation: pulse 2s infinite;
+        }
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+        .spark {
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            background-color: #ffd700;
+            border-radius: 50%;
+            opacity: 0.8;
+            animation: sparkle 0.6s forwards;
+        }
+        @keyframes sparkle {
+            0% { transform: scale(1); opacity: 1; }
+            100% { transform: scale(0.1); opacity: 0; }
+        }
+        .bomb {
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            background-color: #ff5252;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 20px;
+            cursor: pointer;
+        }
+        .bonus {
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            background-color: #ffc107;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 20px;
+            cursor: pointer;
+            animation: bounce 1.5s infinite;
+        }
         @keyframes bounce {
             0%, 100% { transform: translateY(0); }
             50% { transform: translateY(-5px); }
