--- a/index.html
+++ b/index.html
@@ -4,267 +4,331 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crypto Hidden Object Game</title>
-  <!--
-    Master version of the hidden object game.
-    Features:
-    * Difficulty selection (easy/normal/hard)
-    * Moving bombs, bonus coins, time and life pickups
-    * Boss star every 5th level requiring multiple clicks
-    * Achievements with toast notifications
-    * Pause/Resume functionality
-    * Dark mode toggle
-    * Dynamic backgrounds and progress bar that changes colour as time runs out
-  -->
   <style>
+    /* Base styling for the page */
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      font-family: Arial, sans-serif;
+      /* Soft gradient background for a modern look */
+      background: linear-gradient(135deg, #c2e9fb 0%, #a1c4fd 100%);
+      color: #333;
     }
+
     header {
       background-color: #4a90e2;
-      color: #fff;
-      width: 100%;
-      padding: 1rem;
+      color: white;
+      padding: 1rem 0;
       text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-    #game-container {
-      margin-top: 2rem;
-      width: 80%;
+
+    /* Card container to hold the game UI */
+    #game-card {
       max-width: 700px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      padding: 1rem;
+      margin: 2rem auto;
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
     }
-    button {
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      cursor: pointer;
-      border: none;
-      border-radius: 4px;
+
+    /* Sections for start and game screens */
+    #start-screen, #game-screen {
+      padding: 1rem 1.5rem;
     }
-    button.primary { background-color: #4a90e2; color: #fff; }
-    button.secondary { background-color: #ccc; color: #333; }
+
+    #start-screen p {
+      margin-top: 0;
+    }
+
+    #start-screen select, #start-screen button {
+      margin-top: 0.5rem;
+      margin-right: 0.5rem;
+    }
+
+    /* Score bar at top of game screen */
+    #score-bar {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 0.5rem;
+      font-weight: bold;
+    }
+
+    #score-bar span {
+      margin-right: 0.5rem;
+    }
+
+    /* Progress bar container */
+    #progress-container {
+      width: 100%;
+      background: #e0e0e0;
+      border-radius: 7px;
+      height: 14px;
+      overflow: hidden;
+      margin-bottom: 0.5rem;
+    }
+
+    #progress-bar {
+      height: 100%;
+      width: 100%;
+      background: #4caf50;
+      transition: width 0.2s linear, background 0.2s linear;
+    }
+
+    /* Hidden object area */
     #hidden-object-area {
       position: relative;
       width: 100%;
-      height: 320px;
+      height: 340px;
       background: linear-gradient(180deg, #83a4d4 0%, #b6fbff 100%);
-      overflow: hidden;
       border-radius: 8px;
+      overflow: hidden;
       margin-bottom: 1rem;
     }
-    .object {
+
+    /* Styles for objects */
+    .object, .bonus, .time-item, .life-item, .boss-star, .bomb {
       position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .object {
       width: 32px;
       height: 32px;
-      color: #ffd700;
-      font-size: 32px;
-      text-align: center;
-      line-height: 32px;
-      cursor: pointer;
+      color: #ffcc00;
       animation: pulse 2s infinite;
     }
-    /* boss star (bigger and tougher) */
+    .bonus {
+      width: 32px;
+      height: 32px;
+      color: #ffc107;
+      animation: bounce 1.5s infinite;
+    }
+    .time-item {
+      width: 32px;
+      height: 32px;
+      color: #00bcd4;
+      animation: bounce 1.6s infinite;
+    }
+    .life-item {
+      width: 32px;
+      height: 32px;
+      color: #e91e63;
+      animation: bounce 1.7s infinite;
+    }
     .boss-star {
-      position: absolute;
       width: 48px;
       height: 48px;
-      font-size: 48px;
-      line-height: 48px;
-      color: #ffeb3b;
-      cursor: pointer;
-      animation: pulseBoss 1.5s infinite;
+      color: #ffd700;
+      animation: pulse 1s infinite;
     }
+    .bomb {
+      width: 32px;
+      height: 32px;
+      color: #f44336;
+    }
+
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.2); }
       100% { transform: scale(1); }
     }
-    @keyframes pulseBoss {
-      0%,100% { transform: scale(1); }
-      50% { transform: scale(1.3); }
-    }
-    .spark {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background-color: #ffd700;
-      border-radius: 50%;
-      opacity: 0.8;
-      animation: sparkle 0.6s forwards;
-    }
-    @keyframes sparkle {
-      0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(0.1); opacity: 0; }
-    }
-    .bomb {
-      position: absolute;
-      width: 32px;
-      height: 32px;
-      background-color: #ff5252;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 20px;
-      cursor: pointer;
-    }
-    .bonus {
-      position: absolute;
-      width: 32px;
-      height: 32px;
-      background-color: #ffc107;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 20px;
-      cursor: pointer;
-      animation: bounce 1.5s infinite;
-    }
-    .time-item {
-      position: absolute;
-      width: 32px;
-      height: 32px;
-      background-color: #4caf50;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 20px;
-      cursor: pointer;
-      animation: bounce 1.5s infinite;
-    }
-    .life-item {
-      position: absolute;
-      width: 32px;
-      height: 32px;
-      background-color: #e91e63;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 20px;
-      cursor: pointer;
-      animation: bounce 1.5s infinite;
-    }
     @keyframes bounce {
-      0%,100% { transform: translateY(0); }
+      0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-5px); }
     }
-    /* HUD elements */
-    #level-info, #coin-display, #lives-info, #score-info, #timer {
-      margin-bottom: 0.3rem;
-      font-weight: bold;
-    }
-    #progress-container {
-      width: 100%;
-      height: 14px;
-      background-color: #e0e0e0;
-      border-radius: 7px;
-      overflow: hidden;
-      margin-bottom: 0.5rem;
-    }
-    #progress-bar {
-      height: 100%;
-      width: 100%;
-      background-color: #4caf50;
-      transition: width 1s linear, background-color 1s linear;
-    }
+
+    /* Control buttons */
     #controls {
-      margin-top: 1rem;
       display: flex;
       flex-wrap: wrap;
-      gap: 0.75rem;
+      gap: 0.5rem;
+      margin-bottom: 0.5rem;
     }
+    #controls button {
+      flex: 1 1 120px;
+      padding: 0.5rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+    #controls button.primary {
+      background: #4a90e2;
+      color: #fff;
+    }
+    #controls button.secondary {
+      background: #ccc;
+      color: #333;
+    }
+    #controls button.danger {
+      background: #f44336;
+      color: #fff;
+    }
+
+    /* Overlay styling for story, shop and achievements */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 200;
+    }
+    .overlay-panel {
+      background: #ffffff;
+      color: #333;
+      border-radius: 10px;
+      padding: 1rem;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      text-align: center;
+    }
+    .dark-mode .overlay-panel {
+      background: #2d2d2d;
+      color: #f5f5f5;
+    }
+    .overlay-panel h2 {
+      margin-top: 0;
+    }
+    #shop-items {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      margin-top: 0.5rem;
+    }
+    .shop-item {
+      background: #f7f7f7;
+      border-radius: 6px;
+      padding: 0.5rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+      border: 1px solid #ddd;
+    }
+    .shop-item:hover {
+      background: #e0f2ff;
+    }
+    .dark-mode .shop-item {
+      background: #444;
+      border: 1px solid #555;
+    }
+    .dark-mode .shop-item:hover {
+      background: #555;
+    }
+
     #game-message {
       margin-top: 0.5rem;
       font-weight: bold;
+      min-height: 1.2rem;
     }
-    #difficulty-select {
-      margin-top: 0.5rem;
-      padding: 0.4rem;
-      font-size: 1rem;
+
+    /* Dark mode toggling */
+    .dark-mode {
+      background: linear-gradient(135deg, #2d2d2d 0%, #4a4a4a 100%);
+      color: #f5f5f5;
     }
-    /* achievement/toast message */
-    #achievement-message {
-      position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      background-color: rgba(0,0,0,0.8);
-      color: #fff;
-      padding: 0.5rem 1rem;
-      border-radius: 4px;
-      display: none;
-      z-index: 1000;
+    .dark-mode header {
+      background: #333;
     }
-    /* dark mode overrides */
-    body.dark-mode {
-      background-color: #121212;
-      color: #ddd;
+    .dark-mode #game-card {
+      background: rgba(50, 50, 50, 0.9);
     }
-    body.dark-mode #game-container {
-      background-color: #1e1e1e;
-      border-color: #444;
+    .dark-mode #hidden-object-area {
+      background: linear-gradient(180deg, #4a4a4a 0%, #2d2d2d 100%);
     }
-    body.dark-mode header {
-      background-color: #333;
+    .dark-mode #progress-container {
+      background: #555;
     }
-    body.dark-mode button.primary { background-color: #0066cc; }
-    body.dark-mode button.secondary { background-color: #555; color: #eee; }
-    body.dark-mode #progress-container { background-color: #444; }
   </style>
 </head>
 <body>
   <header>
     <h1>Crypto Hidden Object Game (Demo)</h1>
   </header>
-  <div id="game-container">
+  <div id="game-card">
+    <!-- Start screen: choose difficulty and theme -->
     <div id="start-screen">
-      <p>Welcome to this hidden object demo game. Choose a difficulty level, then start. You start with a demo balance of 5 coins.</p>
-      <label for="difficulty-select">Difficulty:</label>
+      <p>
+        Welcome to this hidden object demo game. Choose a difficulty level and theme, then start. You begin with a demo balance of 5 coins.
+      </p>
+      <label for="difficulty-select">Difficulty:&nbsp;</label>
       <select id="difficulty-select">
-        <option value="easy">Easy</option>
-        <option value="normal" selected>Normal</option>
-        <option value="hard">Hard</option>
+        <option value="Easy">Easy</option>
+        <option value="Normal" selected>Normal</option>
+        <option value="Hard">Hard</option>
       </select>
-      <br/>
+      <label for="theme-select">Theme:&nbsp;</label>
+      <select id="theme-select">
+        <option value="default" selected>Classic</option>
+        <option value="time">Time Travel</option>
+        <option value="underwater">Underwater</option>
+        <option value="dream">Dream World</option>
+        <option value="village">Village Secrets</option>
+      </select>
+      <br>
       <button id="connect-wallet" class="secondary">Connect Wallet (Demo)</button>
       <button id="start-game" class="primary">Start Game</button>
-      <div id="balance"></div>
+      <div id="balance-display"></div>
     </div>
-    <div id="game-screen" style="display:none;">
-      <div id="level-info"></div>
-      <div id="coin-display"></div>
-      <div id="lives-info"></div>
-      <div id="score-info"></div>
-      <div id="timer"></div>
-      <div id="progress-container"><div id="progress-bar"></div></div>
+    <!-- Game screen: score bar, progress, game area, controls -->
+    <div id="game-screen" style="display: none;">
+      <div id="score-bar">
+        <span id="level-info">Level: 1</span>
+        <span id="coins-display">Coins: 5</span>
+        <span id="lives-info">Lives: 3</span>
+        <span id="highest-info">Highest: 0</span>
+      </div>
+      <div id="progress-container">
+        <div id="progress-bar"></div>
+      </div>
       <div id="hidden-object-area"></div>
       <div id="controls">
-        <button id="hint-button" class="secondary">Hint (Cost: 1 coin)</button>
-        <button id="reveal-button" class="secondary">Reveal All (Cost: 3 coins)</button>
+        <button id="hint-button" class="secondary">Hint (Cost: 1)</button>
+        <button id="reveal-button" class="secondary">Reveal All (Cost: 3)</button>
         <button id="pause-button" class="secondary">Pause</button>
-        <button id="dark-button" class="secondary">Dark Mode</button>
-        <button id="reset-button" class="secondary">Reset Game</button>
+        <button id="darkmode-button" class="secondary">Dark Mode</button>
+        <button id="reset-button" class="danger">Reset Game</button>
       </div>
       <div id="game-message"></div>
     </div>
   </div>
-  <div id="achievement-message"></div>
+  <!-- Overlay for story, shop and achievements -->
+  <div id="overlay">
+    <div id="story-panel" class="overlay-panel" style="display: none;">
+      <h2>Story</h2>
+      <p id="story-text">Some story goes here...</p>
+      <button id="story-continue" class="primary">Continue</button>
+    </div>
+    <div id="shop-panel" class="overlay-panel" style="display: none;">
+      <h2>Shop</h2>
+      <p>Spend your coins on power-ups for the next level.</p>
+      <div id="shop-items"></div>
+      <button id="shop-continue" class="primary">Continue</button>
+    </div>
+    <div id="achievement-panel" class="overlay-panel" style="display: none;">
+      <h2>Achievement Unlocked!</h2>
+      <p id="achievement-text"></p>
+      <button id="achievement-continue" class="primary">Continue</button>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
